--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BY Blog
 SEOTitle: toan的博客 | BY Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/background.jpg
 email: 1760911480@qq.mail
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, toan"
